test/classes/diten/test_scope_resolve_classes.good
test_scope_resolve_classes.chpl:14: error: cannot resolve base type for method 'C.foo'
